// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm renders correctly 1`] = `
<WithStyles(ConfirmBranch)
  agreeText="Agree"
  description="Desc"
  disagreeText="Disagree"
  hasCloseButton={true}
  isOpen={false}
  onClose={[Function]}
  onConfirm={[Function]}
  title="Title"
/>
`;

exports[`Confirm renders correctly without close button 1`] = `
<WithStyles(ConfirmBranch)
  agreeText="Agree"
  description="Desc"
  disagreeText="Disagree"
  hasCloseButton={false}
  isOpen={false}
  onClose={[Function]}
  onConfirm={[Function]}
  title="Title"
/>
`;
